<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>StaffPlus</artifactId>
        <groupId>net.shortninja.staffplus</groupId>
        <version>3.2.9-RELEASE</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>StaffPlus-Core</artifactId>


    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>Staff+</finalName>
                            <minimizeJar>true</minimizeJar>

                            <artifactSet>
                                <excludes>
                                    <exclude>org.bukkit:bukkit</exclude>
                                </excludes>
                                <excludes>
                                    <exclude>org.bukkit:craftbukkit</exclude>
                                </excludes>
                            </artifactSet>

                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.14-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>StaffPlusAPI</artifactId>
            <version>3.2.9-RELEASE</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_7_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_7_R2</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_7_R3</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_7_R4</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_8_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_8_R2</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_8_R3</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_9_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_9_R2</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_10_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_11_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_12_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_13_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_13_R2</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
		<dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_14_R1</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>org.inventivetalent</groupId>
            <artifactId>apimanager</artifactId>
            <version>1.0.2</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>bukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>craftbukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.inventivetalent.packetlistener</groupId>
            <artifactId>api</artifactId>
            <version>3.7.3-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.inventivetalent.packetlistener</groupId>
            <artifactId>1_7</artifactId>
            <version>3.7.3-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>craftbukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.inventivetalent.packetlistener</groupId>
            <artifactId>1_8</artifactId>
            <version>3.7.3-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>craftbukkit</artifactId>
                    <groupId>org.bukkit</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>3.3.1</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.37</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>at.favre.lib</groupId>
            <artifactId>bcrypt</artifactId>
            <version>0.8.0</version>
        </dependency>
        <dependency>
            <groupId>net.shortninja.staffplus</groupId>
            <artifactId>v1_14_R2</artifactId>
            <version>3.2.9-RELEASE</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
</project>
